Android OOP-D: Fix content_shell_test_apk

Fixes two issues which were leading to failures in
content_shell_test_apk:

1) We weren't correctly linking in the Android external begin frame
source java code into content shell, leading to crashes due to class
resolution failure.

2) Scroll tests assume that the browser is notified of every scroll
offset change, whether or not it impacts the UI. As an optimization,
SurfaceSync/Viz doesn't send this data unless needed. Adds a test
only hook to always send data allowing for test inspeciton.

Note that this addresses all but one remaining failure in:
org.chromium.content.browser.VSyncPausedTest#testPauseVSync

Bug: 871774, 871772
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I031d6616bcef11d302b6ecd43ee75586fbae8d71
Reviewed-on: https://chromium-review.googlesource.com/1173736
Reviewed-by: Bo <boliu@chromium.org>
Commit-Queue: Eric Karl <ericrk@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583372}
Former-commit-id: becbb3c96493c0790aa5cd493375e47a61f030e8